--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>New name</h1>
     <img width="200px"src="profile.jpeg" alt="">
     <p>my profile text</p>
+    <P>WHO ARE YOU</P>
 </body>
 </html>
